@@ -1,5 +1,10 @@
 version 1.1.4
 - Make auto-entry of varname for sampling with dummy smarter
+- Fixes for display of values with huge datasets
+- Fix to handle "weird" cases in plotting frequency distributions
+- Auto-detect gnuplot's ability to use "filledcurve" style
+- Translate a few untranslated strings in gtk-1.2 version
+- Graph labels: make 3 labels configurable rather than just 2
 
 10/01/2003 version 1.1.3
 - Fix crashing bug in viewing dataset info
